--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajax": "0.0.4",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1"
   },
