--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "crypto": "^1.0.1",
+    "hexo-helper-live2d": "^3.1.1",
+    "live2d-widget-model-epsilon2_1": "^1.0.5",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1"
   },
