--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-particles": "^1.0.9",
+    "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
